<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danilo.taller1.Taller1">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REGISTRO_DE_PERSONAS"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/Primer_Nombre" />

        <EditText
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtPNombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Segundo_Nombre"
            android:id="@+id/textSNombre" />

        <EditText
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtSNombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Primer_Apellido" />

        <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtPApellido" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Segundo_Apellido" />

        <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtSApellido" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:digits="1234567890"
            android:text="@string/Edad" />

        <EditText
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtEdad" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sexo" />

        <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtSexo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mostrar"
                android:id="@+id/btnMostrar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Borrar"
                android:id="@+id/btnBorrar" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
